--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,9 +25,11 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "uvicorn",
-    "starlette"
+    "starlette",
+    "sqlalchemy",
+    "asyncpg"
 ]
 
 
 [project.scripts]
-__main__ = "geodb.website.test:main"
+__main__ = "geodb.website.main:main"
